apps/yaade/components/istio/virtualservice.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: yaade
spec:
  hosts:
    - yaade.svc.dd.soeren.cloud
  gateways:
    - istio-system/gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: yaade.yaade.svc.cluster.local
            port:
              number: 80
